--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,119 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+
+.container-slider {
+  max-width: 300px;
+  height: 300px;
+  margin: 10px auto 10px;
+  position: relative;
+  overflow: hidden;
+  /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); */
+}
+
+
+
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  transition: opacity ease-in-out 0.4s;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.active-anim {
+  opacity: 1;
+}
+
+.btn-slide {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background:  rgba(11, 125, 15, 1);
+  border: 1px solid rgba(34, 34, 34, 0.287);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn-slide img {
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+}
+.prev {
+  top: 50%;
+  left: 10px;
+  transform: translateY(-60%);
+}
+.next {
+  top: 50%;
+  right: 10px;
+  transform: translateY(-60%);
+}
+
+
+.container-dots {
+  position: absolute;
+  bottom: 4px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 3px solid #bebebe;
+  margin: 0 5px;
+  background: #f1f1f1;
+}
+.dot.active {
+  background:  rgba(11, 125, 15, 1);
+}
+
+
+.vertical-range {
+  height:120px;
+  width: 120px;
+  border-radius: 5px;
+  outline: none;
+  transform: rotate(90deg);
+}
+
+
+
+::-moz-range-track {
+    background: #ccc;
+    border: 0;
+}
+
+input::-moz-focus-inner { 
+  border: 0; 
+}
+
+
+@media screen and (max-width: 768px){
+  .container-slider {
+    margin: 0px 0px 10px;
+    height: 200px;
+  }
+
+  .vertical-range {
+    height:80px;
+    width: 80px;
+    border-radius: 5px;
+    outline: none;
+    transform: rotate(90deg);
+  }
 }
