Avatar Data Search
Added in the avatar data search from the algolia service.  Reused the components to be used in the imageSet area of putting together the image set.  Next up is to create a New Avatar complete with File uploaded, as well as editing of the Avatar data in their table.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,14 @@ input::-moz-focus-inner {
   border: 0; 
 }
 
+#avatar-hits .ais-Hits-list {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  width: 100%;
+}
+
+
 
 @media screen and (max-width: 768px){
   .container-slider {
