--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,6 +127,13 @@ input::-moz-focus-inner {
 }
 
 
+#dezzi-hits .ais-Hits-list {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  width: 100%;
+}
+
 
 @media screen and (max-width: 768px){
   .container-slider {
@@ -140,5 +147,17 @@ input::-moz-focus-inner {
     border-radius: 5px;
     outline: none;
     transform: rotate(90deg);
+  }
+
+  #avatar-hits .ais-Hits-list {
+    grid-template-columns: none;
+    grid-template-rows: auto;
+    grid-gap: 10px;
+  }
+
+  #dezzi-hits .ais-Hits-list {
+    grid-template-columns: none;
+    grid-template-rows: auto;
+    grid-gap: 10px;
   }
 }
